force-app/main/default/objects/Milestone__c/fields/Is_System_Generated__c.field-meta.xml
<CustomField>
    <fullName>Is_System_Generated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto-Generated</label>
    <type>Checkbox</type>
</CustomField>