force-app/main/default/objects/Milestone__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Milestone Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Fee Paid</fullName>
            </value>
            <value>
                <fullName>Acknowledged</fullName>
            </value>
            <value>
                <fullName>Biometrics Scheduled</fullName>
            </value>
            <value>
                <fullName>Biometrics Completed</fullName>
            </value>
            <value>
                <fullName>Medical Completed</fullName>
            </value>
            <value>
                <fullName>Interview Scheduled</fullName>
            </value>
            <value>
                <fullName>Interview Completed</fullName>
            </value>
            <value>
                <fullName>Additional Info Requested</fullName>
            </value>
            <value>
                <fullName>Decision</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>